use local jolt-toolchain

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ codegen-units = 1
 lto = "fat"
 
 [dependencies]
-jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["host"] }
+jolt = { package = "jolt-sdk", path = "../../a16z/jolt/jolt-sdk", features = ["host"] }
 guest = { path = "./guest" }
 fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
