--- a/guest/Cargo.toml
+++ b/guest/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 guest = []
 
 [dependencies]
-jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["guest-std"] }
+jolt = { package = "jolt-sdk", path = "../../../a16z/jolt/jolt-sdk", features = ["guest-std"] }
 fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
