--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,10 @@
-[package]
-name = "pove"
-version = "0.1.0"
-edition = "2021"
-
 [workspace]
-members = ["guest"]
+members = [
+    "lib",
+    "program",
+    "script",
+]
+resolver = "2"
 
-[profile.release]
-debug = 1
-codegen-units = 1
-lto = "fat"
-
-[dependencies]
-jolt = { package = "jolt-sdk", path = "../../a16z/jolt/jolt-sdk", features = ["host"] }
-guest = { path = "./guest" }
-fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
-fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
-
-[patch.crates-io]
-ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
-ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
-ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
+[workspace.dependencies]
+alloy-sol-types = "0.7.7"
