--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-# Cargo build
-**/target
-
-# Cargo config
-.cargo
-
-# Profile-guided optimization
-/tmp
-pgo-data.profdata
-
-# MacOS nuisances
+target
+.cargo-ok
 .DS_Store
-
-# Proofs
-**/proof-with-pis.json
-**/proof-with-io.json
-
-# Env
-.env
