--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [workspace]
-members = [
-    "lib",
-    "program",
-    "script",
-]
 resolver = "2"
+members = ["host", "methods"]
 
-[workspace.dependencies]
-alloy-sol-types = "0.7.7"
+# Always optimize; building and running the guest takes much longer without optimization.
+[profile.dev]
+opt-level = 3
+
+[profile.release]
+debug = 1
+lto = true
