--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "bfv-lib"
+name = "pove"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+
 [dependencies]
-alloy-sol-types = { workspace = true }
+risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
 fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
