implement toy custom_getrandom

--- a/guest/Cargo.toml
+++ b/guest/Cargo.toml
@@ -10,3 +10,4 @@ guest = []
 jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["guest-std"] }
 fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
+getrandom = { version = "0.2", features = ["custom"] }
