--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = 
 guest = { path = "./guest" }
 fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
+getrandom = { version = "0.2", features = ["custom"] }
+
 
 [patch.crates-io]
 ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
